убрал невидимый текст в коментарии

--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -10,7 +10,7 @@ permalink: /диагностика-кровли
 
 #### Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **1. Нахождение мест протечек мембранной кровли.**  
 ![](/img/0/1.2.1.jpg)   
 
@@ -29,43 +29,43 @@ permalink: /диагностика-кровли
 
 ![](/img/evk/KDK.001.png){:class="uk-align-left uk-width-1-2"}
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **2. Нахождение мест протечек листовых и мягких кровель.**  
 ![](/img/0/1.2.2.jpg){:class="uk-align-left uk-width-1-2"}
 *    Визуальное обследование, нахождение причин протечек.   
 *    Инструментальное обследование, которое выполняется после и на основании визуального осмотра.
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **3. Качество монтажа кровельных материалов.**  
 ![](/img/0/1.2.3.6.jpg){:class="uk-align-left uk-width-1-2"}  
 
 Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **4. Определение мест утечки тепла.**  
 ![](/img/0/1.2.4.jpg){:class="uk-align-left uk-width-1-2"}     
 
 Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **5. Опорные металлические конструкции.**  
 ![](/img/0/1.2.5.jpg)    
 Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
 
 Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **6. Несущая способность кровли.**    
 
 Определение несущей способности кровли производится путем комплексного обследования несущих конструкций кровли, определения их прочностных характеристик, конструктивных особенностей и сбора существующих нагрузок. 
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **7. Деревянная конструкция кровли.**
 ![](/img/0/1.2.7.jpg)    
 
 Деревянная кровля одна из наиболее распространенных конструкций кровли требующая значительного внимания. Неправильная сушка древесины, избыточная влажность, отсутствие обработки, наличие плесени, грибка - всё это способно за короткое время привести материал в непригодность. Вызов специалиста поможет вам узнать фактическое качество древесины. Так же, при наличии любых видов дефектов и недостатков, эксперты специально для Вас разработают мероприятия для того, чтобы ваша кровля прослужила вам как можно дольше.
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **8. Инфракрасная термография.**    
 
 Метод обнаружения скопления влаги под кровельным покрытием.     
@@ -85,7 +85,7 @@ permalink: /диагностика-кровли
 7. Общую картину повреждений, недоделок или качества выполненных работ.  
 8. Понимание фронта работ и необходимости ремонта, восстановления или замене той или иной детали, конструкции или покрытия  .   
 9. Полученная информация поможет сэкономить ваш бюджет.  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ### **Какие документы получаем по окончанию обследования.**
 ![](/img/0/1.2.9.jpg){:class="uk-align-left uk-width-1-3"}
@@ -97,7 +97,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * К заключению прилагаются рекомендации по устранению выявленных дефектов.  
 * На бумажном носителе в 2-х (двух) экземплярах.  
 * В электронном виде (сканировании копия в формате PDF).  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 **техническое заключение формируется на основании технического задания.**
 
