--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -17,10 +17,10 @@ permalink: /неразрушающая-лаборатория
 
        
        
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### 2. __[Электро-векторное картирование]({% link 7.1.2.0_evk.md %})__    
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 
 Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия.      
@@ -60,7 +60,7 @@ permalink: /неразрушающая-лаборатория
 
 * Главным достоинством данной методики является его простота и возможность работы в сложных условиях. Однако следует учитывать, что полученных данных недостаточно для экспертной оценки прочности бетона.  Для этого необходимы другие методики контроля, в частности отрыв со скалыванием.
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **5. Тепловизионное обследование.**  
 
 Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** 
