--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -20,7 +20,7 @@ permalink: /анкерная-линия-GALEREYA
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России   
 
 {% include el-contact-form.html icon="receiver" text="Заказать" %}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Преимущества системы**
 ![](/img/sss/3.1.1.jpg)
@@ -37,48 +37,48 @@ permalink: /анкерная-линия-GALEREYA
 Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии.  
 Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
 **Материал:** нержавеющая сталь
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.FHL205.gif){:class="uk-align-left uk-width-1-3"}
 #### **Амортизирующее устройство** (арт. FHL205)  
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже.   
 Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.  
 **Материал:** нержавеющая сталь
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.FHL202.gif){:class="uk-align-left uk-width-1-3"}
 #### **Промежуточный структурный анкер** (арт.FHL202)
 Служит в качестве направляющей стального троса, а также дополнительной анкерной точкой крепления. Устанавливается через каждые 12 метров.   
 **Материал:** нержавеющая сталь
-###### отменяет действие align-left и align-right 
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 
 ![](/img/sss/3.FHL206.gif){:class="uk-align-left uk-width-1-3"}
 #### **Натяжитель для троса** (арт. FHL206)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.
 **Материал:** нержавеющая сталь
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.FHL203.gif){:class="uk-align-left uk-width-1-3"}
 #### **Ролик-натяжитель** (арт. FHL203) 
 Позволяет осуществлять установку троса без разрыва - единым участком, а также обеспечивает равномерное натяжение каждой стороны анкерной линии.  
 **Материал:** нержавеющая сталь, высоко прочный пластик
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.FHL207.png){:class="uk-align-left uk-width-1-3"}
 #### **Крайний структурный анкер, нерж.сталь** (арт. FHL207) 
 Применяется для монтажа линии к элементам постоянной конструкции.   
 **Материал:** нержавеющая сталь
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
 #### **Цанговый зажим** (ZG002)  
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
 #### **Трос анкерной линии** (арт. SSR001)  
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
