--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -15,11 +15,11 @@ permalink: /анкерная-линия-MOST
 {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
 {% include el-contact-form.html icon="receiver" text="Заказать" %}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ### **Преимущества системы**
 ![](/img/sss/3.3.1.1.png)
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 • Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6 (взрывозащита: IIC Ga T6).  
 • До 3-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}    
@@ -27,7 +27,7 @@ permalink: /анкерная-линия-MOST
 • Подходит для работы в безопорном пространстве (работы в висе/ положении сидя).  
 • Исполнение в двух цветовых вариантах (серебристый; черный).  
 • Система анодирована, что позволяет повысить ее прочность и продлить срок службы. 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Состав системы**
 
@@ -37,7 +37,7 @@ permalink: /анкерная-линия-MOST
 Корпус анкерной точки (тележки) может быть выполнен как в серебристом цвете, так и в золотом, что позволяет легко обозначить его в условиях плохой видимости.    
 Роликовые колеса тележки из капролона обеспечивают бесперепятсвенное движение тележки по всей длине линии.     
 **Материал:** алюминий. 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.RHL302.gif){:class="uk-align-left uk-width-1-3"}
 #### **Сегмент анкерной направляющей** (арт. RHL302)
@@ -45,14 +45,14 @@ permalink: /анкерная-линия-MOST
 Благодаря этому возможна установка на любую длину и геометрию.   
 Может быть выполнен в серебристом или черном цвете, благодаря чему органично вписывается в оформление современных фасадов зданий.   
 **Материал:** алюминий.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.RHL303.gif){:class="uk-align-left uk-width-1-3"}
 #### **Соединитель сегментов** (арт. RHL303)
 Предназначен для соединения рельсовых сегментов жесткой анкерной линии.   
 Устанавливается на стыке сегментов для надежного соединения участков линии.     
 **Материал:** алюминий. 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.RHL304.gif){:class="uk-align-left uk-width-1-3"}
 #### **Концевой ограничитель** (арт. RHL304)
@@ -60,27 +60,27 @@ permalink: /анкерная-линия-MOST
 Предназначен для предотвращения случайного соскальзывания мобильной анкерной точки (тележки) с рельсовго сегмента.   
 Может быть выполнен в серебристом или золотом цвете.     
 **Материал:** алюминий. 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.RHL305.gif){:class="uk-align-left uk-width-1-3"}
 #### **Держатель сегментов** (арт. RHL305)
 Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов).   
 Предназначен для крепления анкерной линии к элементам постоянной конструкции.     
 **Материал:** алюминий.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.RHL306.gif){:class="uk-align-left uk-width-1-3"}
 #### **Структурный анкер с крепление одним болтом/ двумя болтами** (арт. RHL 306/RHL307)
 Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов).   
 Предназначен для крепления анкерной линии к элементам постоянной конструкции.     
 **Материал:** нержавеющая сталь.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.RHL308.gif){:class="uk-align-left uk-width-1-3"}
 #### **Шкант для соединения сегментов** (арт. RHL308)
 Используется при соединении рельсовых сегментов на стыке участков.   
 **Материал:** нержавеющая сталь.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
