--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -13,7 +13,7 @@ permalink: /электро-векторное-картирование
 
 ### Тестирование Мембраны Плоской Крыши
 ![](/img/evk/EVK.006.jpg){:class="uk-align-left uk-width-1-2"}
-###### отменяет действие align-left и align-right 
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %} 
 #### Испытания Плоских Кровельных Материалов
 
 *Детектор протечек Buckleys Wet Roof Pro’ может определить и обнаружить местонахождение утечки внутри плоской крыши.*
@@ -26,13 +26,13 @@ permalink: /электро-векторное-картирование
 
 ### Типичная однослойная плоская конструкция крыши
 ![](/img/evk/EVK.007.jpg){:class="uk-align-left uk-width-1-2"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 *Детектор протечек Buckleys Wet Roof Pro’: обнаруживает утечки во влажных условиях.*
 
 ### **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**
 ![](/img/evk/EVK.001.jpg){:class="uk-align-left uk-width-1-2"}
 Найдите протечки крыши в условиях влажной погоды
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ### Мокрые Крыши Про
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.
@@ -43,7 +43,7 @@ permalink: /электро-векторное-картирование
 
 Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.
 Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
 ![](/img/evk/EVK.003.jpg){:class="uk-align-left uk-width-1-2"}
@@ -56,7 +56,7 @@ permalink: /электро-векторное-картирование
 * Тест на протечки круглый год
 * Способный испытывать любую толщину мембраны
 * Дискретная звуковая сигнализация
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 **Технические характеристики:**
 * Напряжение тока импульс выхода: DC 32V
 * Выходная мощность: <10 Вт
@@ -77,4 +77,4 @@ permalink: /электро-векторное-картирование
 ![](/img/evk/KDK.002.png){:class="uk-align-left uk-width-1-2"}
 ![](/img/evk/KDK.003.png){:class="uk-align-left uk-width-1-2"}
 ![](/img/evk/KDK.004.png){:class="uk-align-left uk-width-1-2"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
