--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -14,7 +14,7 @@ permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
 **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
 ![](/img/evk/EVK.002.jpg){:class="uk-align-left uk-width-1-2"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ` ` Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.  
 
 ` ` Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.  
@@ -32,7 +32,7 @@ permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
 * Способный испытывать любую толщину мембраны  
 * Дискретная звуковая сигнализация  
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 **Технические характеристики**  
 * Напряжение тока импульс выхода: DC 32V  
 * Выходная мощность: <10 Вт  
@@ -44,4 +44,4 @@ permalink: /детектор-протечек-Buckleys-Wet-Roof-Pro
 ![](/img/evk/EVK.004.jpg){:class="uk-align-left uk-width-1-3"}  
 ![](/img/evk/EVK.009.png){:class="uk-align-left uk-width-1-3"}  
 ![](/img/evk/EVK.005.jpg){:class="uk-align-left uk-width-1-3"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
