--- a/7.2_Instrument.md
+++ b/7.2_Instrument.md
@@ -18,7 +18,7 @@ permalink: /инструменты
 ![](/img/Instrument/EVK.01.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/EVK.02.jpg){:class="uk-align-left uk-width-1-3"}
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Мокрые Крыши Про**
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
@@ -31,7 +31,7 @@ permalink: /инструменты
  
 ![](/img/Instrument/PST100.01.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/PST100.02.jpg){:class="uk-align-left uk-width-1-3"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 **Применение:**
 
@@ -42,7 +42,7 @@ permalink: /инструменты
 {: .uk-text-center}
 ![](/img/Instrument/МТ2007.01.jpg){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/МТ2007.02.jpg){:class="uk-align-left uk-width-1-3"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Магнитный толщиномер покрытий МТ-2007 предназначен для измерения толщины лакокрасочных, гальванических, огнезащитных и любых других немагнитных токопроводящих и непроводящих покрытий на ферромагнитных (сталь, чугун и пр.) основаниях  
 
@@ -56,7 +56,7 @@ permalink: /инструменты
 {: .uk-text-center}
 ![](/img/Instrument/Testo865.01.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/Testo865.02.png){:class="uk-align-left uk-width-1-3"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Тепловизор testo 865 – профессиональный прибор, который ориентирован на решение самых важных задач для повседневной работы специалиста.  
 Область применение тепловизора Testo 865:  
@@ -71,7 +71,7 @@ permalink: /инструменты
 {: .uk-text-center}
 ![](/img/Instrument/EasyBeton.01.jpg){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/EasyBeton.02.png){:class="uk-align-left uk-width-1-3"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Измеритель прочности Beton Easy CONDTROL предназначен для неразрушающего контроля прочности и однородности бетона методом ударного импульса по ГОСТ 22690   
 
@@ -86,7 +86,7 @@ permalink: /инструменты
 {: .uk-text-center}
 ![](/img/Instrument/vik.01.jpg){:class="uk-align-left uk-width-1-3"}
 ![](/img/Instrument/vik.02.jpg){:class="uk-align-left uk-width-1-3"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 Набор НТЦ Эксперт ВИК разработан для **профессионального контроля производственных объектов.** Значительно оптимизирован по функционалу и качеству измерительного инструмента. Набор комплектуется сертификатом о калибровке и флешкой, содержащей образцы техкарт, актов и журналов ВИК. 
 
