--- a/_portfolio/20191024.md
+++ b/_portfolio/20191024.md
@@ -13,7 +13,7 @@ title: Обследование мягкой кровли таунхаус
 Шифр проекта: 20191024**	
 
 #### **Причины обследования: протечки внутри дома во время ливневых дождей**
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ### **Техническое задание**
 1.	Обследование мягкую кровлю на предмет выявления нарушений герметичности кровельного покрытия и конструктивных элементов расположеных на кровле.
@@ -31,7 +31,7 @@ title: Обследование мягкой кровли таунхаус
 #### 1.	Повреждение конькового элемента.
 
   
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### 2.	Отсутствует герметичных примыканий соединения кровельного покрытия к внешним выходам вентиляционных труб.  
 
@@ -42,7 +42,7 @@ title: Обследование мягкой кровли таунхаус
 ![](/img/portfolio/20191024/20191024.6.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20191024/20191024.7.png){:class="uk-align-left uk-width-1-3"}
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### 3.	Не выполненная герметизация металлического отлива к облицовке фасада.
 
@@ -51,7 +51,7 @@ title: Обследование мягкой кровли таунхаус
 ![](/img/portfolio/20191024/20191024.10.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20191024/20191024.11.png){:class="uk-align-left uk-width-1-3"}
    
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### 4.	При обследовании чердачного помещения было обнаружено, что диффузионная мембрана частично срезана и вентиляционный продух герметично закрыт. Из-за этого отвод пара и конденсата не происходит. 
 
@@ -59,7 +59,7 @@ title: Обследование мягкой кровли таунхаус
 ![](/img/portfolio/20191024/20191024.13.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20191024/20191024.14.png){:class="uk-align-left uk-width-1-3"}
   
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **По результатам проведенного обследования:** 
 - был составлен отчет о причинах нарушений герметичности кровельного покрытия и конструктивных элементов.
