--- a/_portfolio/20200123.md
+++ b/_portfolio/20200123.md
@@ -17,7 +17,7 @@ title: Обследование кровельного покрытия
 #### **Инженерно-техническое обследование кровельного покрытия здания.**
 #### **Причина обследования:** Обследование кровли проводится по причине возникновения протечек, зафиксированных внутри помещений во время дождей и таяния снега по периметру кровельного свеса.  
 **Цель обследования:** Качественная оценка технического состояния конструкции кровли и кровельного покрытия; поиск дефектов гидроизоляционного слоя.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 
 ### **Техническое задание.**
@@ -42,14 +42,14 @@ title: Обследование кровельного покрытия
 ![](/img/portfolio/20200123/20200123.2.jpg){:class="uk-align-left uk-width-1-2"}
 
  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Размеры и уклоны крыши:**
 
 ![](/img/portfolio/20200123/20200123.3.jpg){:class="uk-align-left uk-width-1-2"}
 
  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **1. Уклоны кровельных скатов** 
 ![](/img/portfolio/20200123/20200123.4.jpg){:class="uk-align-left uk-width-1-2"}
@@ -57,7 +57,7 @@ title: Обследование кровельного покрытия
  
 **Комментарий:**   
 СП 17.13330.2017 Кровли, табл. 4.1 - ***Частично не соответствует***
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **2. Водоотвод**
 ![](/img/portfolio/20200123/20200123.5.png){:class="uk-align-left uk-width-1-2"}
@@ -66,7 +66,7 @@ title: Обследование кровельного покрытия
 **Комментарий:**   
 СП 17.13330.2017 - ***Не соответствует***  
 Водоотвод осуществляется в наружный водосборный желоб, водоотведение через водосточные трубы Д140 мм. Частично отсутствуют водосборный желоб и водосточные трубы.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **3. Вентиляция кровли**
 ![](/img/portfolio/20200123/20200123.6.png){:class="uk-align-left uk-width-1-2"}
@@ -75,7 +75,7 @@ title: Обследование кровельного покрытия
 **Комментарий:**   
 СП 17.13330.2017 п. 4.5 - ***Не соответствует***  
 Отсутствует вентиляция подкровельного пространства: отсутствие вент. каналов на карнизных участках, на коньке кровли, что препятствует выведению конденсата и приводит к его избыточному накоплению в подкровельном пространстве.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **4. Отсутствие герметичных примыканий кровли к вертикальным поверхностям**
 СП 17.13330.2017 п. 7.2. - ***Не соответствует***  
@@ -86,33 +86,33 @@ title: Обследование кровельного покрытия
  
 СП 17.13330.2017 - ***Не соответствует***
 Целостность кровельного покрытия нарушена вследствие пробития гвоздями для закрепления ремонтных материалов.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **6. Защитное ограждение на кровле**
 ![](/img/portfolio/20200123/20200123.8.png){:class="uk-align-left uk-width-1-2"}
 
 СП 56.13330.2011 п. 5.3.3 - ***Отсутствует***  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **7. Элементы для крепления страховочного троса**
 ![](/img/portfolio/20200123/20200123.9.png){:class="uk-align-left uk-width-1-2"}
  
 СП 17.13330.2017 п. 4.8 – **Соответствует**  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **8. Шаг стропильных ног 1300-1500 мм.**
 ![](/img/portfolio/20200123/20200123.91.png){:class="uk-align-left uk-width-1-2"}
  
 СП 17.13330.2017 - **Соответствует**  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **9. Шаг обрешетки 300 – 400 мм, доска обрешетки необрезная 25 мм.**
 ![](/img/portfolio/20200123/20200123.92.png){:class="uk-align-left uk-width-1-2"}
  
 СП 17.13330.2017 - **Соответствует**  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **10. Карнизный свес**
 ![](/img/portfolio/20200123/20200123.93.png){:class="uk-align-left uk-width-1-2"}
  
 СП 17.13330.2017 3.1.11 - ***Не соответствует***  
 Конструкция карнизного свеса не защищает стены от дождевой или талой воды.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **По результатам проведенного обследования:**
 - было составлено техническое заключение.   
