--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -15,7 +15,7 @@ permalink: /фасады
 ### __Вид обследования:__  
 1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению. 
 2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ***Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).***  
  
@@ -43,7 +43,7 @@ permalink: /фасады
 4. Контроль выполненных работ. 
 5. Сверку проектной (исполнительной) документации с выполненными работами.
 6. Полученная информация поможет сэкономить ваш бюджет.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 #### **Какие документы получаем по окончанию обследования.**  
 ![](/img/0/1.2.9.jpg){:class="uk-align-left uk-width-1-3"}  
@@ -54,7 +54,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * К заключению прилагаются рекомендации по устранению выявленных дефектов.  
 * На бумажном носителе в 2-х (двух) экземплярах.  
 * В электронном виде (сканировании копия в формате PDF).
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 **техническое заключение формируется на основании технического задания.**
 
 ___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
