--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -58,7 +58,7 @@ permalink: /стационарные-страховочные-системы
 •	количество задействованных работников;  
 •	возможность для работников свободно передвигаться;  
 •	особенности условий работы.
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
