--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -16,7 +16,7 @@ permalink: /анкерные-столбы
 
 {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия     
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 ![](/img/sss/3.AP-2h.jpg){:class="uk-align-left uk-width-1-3"}
 ### **Анкерный столб, круглый** (арт. AP-2h)
@@ -29,7 +29,7 @@ permalink: /анкерные-столбы
 **Высота столба:** 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
 ![](/img/sss/3.AP-4h.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб, боковое крепление** (арт. AP-4h)  
@@ -41,7 +41,7 @@ permalink: /анкерные-столбы
 **Количество пользователей:** 2  
 **Статическая прочность:** 24 кН  
 **Размер балки:** высота 120 - 780 мм, ширина - до 300 мм
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
 ![](/img/sss/3.AP-8h.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб, многогранный** (арт. AP-8h)  
@@ -52,7 +52,7 @@ permalink: /анкерные-столбы
 **Материал:** нержавеющая сталь  
 **Количество пользователей:** 2  
 **Статическая прочность:** 24 кН  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
 ![](/img/sss/3.AP-T200.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб "ТИТАН 200"** (арт. AP-T200)  
@@ -65,7 +65,7 @@ permalink: /анкерные-столбы
 **Высота столба:** 2 м  
 **Количество пользователей:** 1  
 **Статическая прочность:** мин. 24 кН
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
 ![](/img/sss/3.AP-T200b.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб "ТИТАН 200 b"** (арт. AP-T200b)
@@ -77,7 +77,7 @@ permalink: /анкерные-столбы
 **Высота столба:** 2 м  
 **Количество пользователей:** 1 (при использовании в комплекте для разъединителей с гибкой анкерной линией - 2)  
 **Статическая прочность:** мин. 24 кН
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
 ![](/img/sss/3.AP-S200.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб AP-S200** (арт. AP-S200)
@@ -90,7 +90,7 @@ permalink: /анкерные-столбы
 **Высота столба:** 2 м  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
 ![](/img/sss/3.AP-S200b.jpg){:class="uk-align-left uk-width-1-3"}  
 #### **Анкерный столб AP-S200b** (арт. AP-S200b)
@@ -101,7 +101,7 @@ permalink: /анкерные-столбы
 **Высота столба**: 2 м  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
 ![](/img/sss/3.AP-R10.jpg){:class="uk-align-left uk-width-1-3"}  
 #### **Анкерный столб для кровли** (арт. AP-R10)
@@ -112,7 +112,7 @@ permalink: /анкерные-столбы
 **Материал:** нержавеющая сталь  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
  
  
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
