--- a/_portfolio/20160817.md
+++ b/_portfolio/20160817.md
@@ -14,7 +14,7 @@ title: Обследование межпанельных швов
 
 #### **Причины обследования: Разрушение старого герметика, определение объёма работ по герметизации**
 
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ### **Техническое задание**  
 1.	Обследование межпанельные швы на фасаде здания.  
 2.	Составление отчета об обследовании с указанием объема и мест ремонта (герметизации) межпанельных (межплиточных) швов.
@@ -29,14 +29,14 @@ title: Обследование межпанельных швов
 #### **По результатам обследования здания, на предмет выявления мест повреждения (разрушения) герметичного соединения межпанельных (межплиточных) швов, была составлена дефектная ведомость.**
 ![](/img/portfolio/20160817/20160817.1.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20160817/20160817.2.png){:class="uk-align-left uk-width-1-3"}
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 ![](/img/portfolio/20160817/20160817.3.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20160817/20160817.4.png){:class="uk-align-left uk-width-1-3"}
 
    
 
     
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 #### **Так должны выглядеть отремонтированные швы:**
 ![](/img/portfolio/20160817/20160817.5.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20160817/20160817.6.png){:class="uk-align-left uk-width-1-3"}
@@ -44,7 +44,7 @@ title: Обследование межпанельных швов
 
     
  
-###### отменяет действие align-left и align-right
+###### &nbsp; {% comment %} отменяет действие align-left и align-right {% endcomment %}
 
 
 
